--- a/src/Locale_en.properties
+++ b/src/Locale_en.properties
@@ -46,5 +46,6 @@ parameters=Specify the parameters of the person.
 searchfield=Type name for search
 settings=Settings
 table=Table
+tryagain=Try again.
 update=Edit
 view=View
