--- a/src/Locale_en.properties
+++ b/src/Locale_en.properties
@@ -3,6 +3,7 @@ addifminneg=This element is not minimal
 addnewpersonerror=There was an error opening the change person menu
 alert=Attention!
 center=Center
+choosescript=Choose script
 clearquestion=Do you want to delete all your objects?
 collectioncontain=The collection contains 
 console=Console
@@ -11,6 +12,7 @@ country=Nationality
 creationdate=Creation date
 delete=Delete
 error=Error!
+executescript=Execute script
 exit=Exit
 eyecolor=Eye color
 filter=Distinct height only
@@ -40,9 +42,11 @@ language=Language
 lastcommands=Latest commands
 location=Location
 name=Name
+nosuchscript=No such script
 objects=\ objects
 owner=Owner
 parameters=Specify the parameters of the person.
+scriptexecuted=Script executed successfully
 searchfield=Type name for search
 settings=Settings
 table=Table
